account deletion and init data fix