@@ -1,6 +1,9 @@
 package com.cleany.retention;
 
+import java.time.Clock;
 import java.time.Instant;
+import java.time.ZoneOffset;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
@@ -14,6 +17,7 @@ import com.cleany.order.CleaningOrderEventRepository;
 import com.cleany.order.CleaningOrderIssuePhotoRepository;
 import com.cleany.order.CleaningOrderPhotoRepository;
 import com.cleany.order.CleaningOrderRepository;
+import com.cleany.referral.ReferralEligibilityService;
 
 class DataRetentionCleanupServiceTest {
 
@@ -28,6 +32,7 @@ class DataRetentionCleanupServiceTest {
                 Mockito.mock(CleaningOrderPhotoRepository.class);
         CleaningOrderEventRepository eventRepository = Mockito.mock(CleaningOrderEventRepository.class);
         MediaOrphanCleanupService mediaOrphanCleanupService = Mockito.mock(MediaOrphanCleanupService.class);
+        ReferralEligibilityService referralEligibilityService = Mockito.mock(ReferralEligibilityService.class);
         List<Long> orderIds = List.of(10L, 11L);
         Mockito.when(orderRepository.findRetentionEligibleOrderIds(CUTOFF, 100)).thenReturn(orderIds);
         Mockito.when(issuePhotoRepository.deleteResolvedByOrderIds(orderIds)).thenReturn(3);
@@ -39,7 +44,9 @@ class DataRetentionCleanupServiceTest {
                 issuePhotoRepository,
                 completionPhotoRepository,
                 eventRepository,
-                mediaOrphanCleanupService
+                mediaOrphanCleanupService,
+                referralEligibilityService,
+                Clock.fixed(CUTOFF, ZoneOffset.UTC)
         );
 
         DataRetentionCleanupResult result = service.cleanupBatch(CUTOFF, 100);
@@ -54,12 +61,14 @@ class DataRetentionCleanupServiceTest {
         deletionOrder.verify(issuePhotoRepository).deleteResolvedByOrderIds(orderIds);
         deletionOrder.verify(eventRepository).deleteByOrderIds(orderIds);
         deletionOrder.verify(mediaOrphanCleanupService).deleteUnreferencedBatch(100);
+        Mockito.verify(referralEligibilityService).deleteExpiredMarkers(CUTOFF, 100);
         Assertions.assertAll(
                 () -> Assertions.assertEquals(2, result.eligibleOrderCount()),
                 () -> Assertions.assertEquals(3, result.deletedIssuePhotoCount()),
                 () -> Assertions.assertEquals(2, result.deletedCompletionPhotoCount()),
                 () -> Assertions.assertEquals(8, result.deletedAuditEventCount()),
                 () -> Assertions.assertEquals(4, result.deletedMediaAssetCount()),
+                () -> Assertions.assertEquals(0, result.deletedReferralEligibilityMarkerCount()),
                 () -> Assertions.assertFalse(result.hasMoreWork())
         );
     }
@@ -73,14 +82,18 @@ class DataRetentionCleanupServiceTest {
                 Mockito.mock(CleaningOrderPhotoRepository.class);
         CleaningOrderEventRepository eventRepository = Mockito.mock(CleaningOrderEventRepository.class);
         MediaOrphanCleanupService mediaOrphanCleanupService = Mockito.mock(MediaOrphanCleanupService.class);
-        Mockito.when(orderRepository.findRetentionEligibleOrderIds(CUTOFF, 100)).thenReturn(List.of());
+        ReferralEligibilityService referralEligibilityService = Mockito.mock(ReferralEligibilityService.class);
+        Mockito.when(orderRepository.findRetentionEligibleOrderIds(CUTOFF, 100))
+                .thenReturn(Collections.emptyList());
         Mockito.when(mediaOrphanCleanupService.deleteUnreferencedBatch(100)).thenReturn(2);
         var service = new DataRetentionCleanupService(
                 orderRepository,
                 issuePhotoRepository,
                 completionPhotoRepository,
                 eventRepository,
-                mediaOrphanCleanupService
+                mediaOrphanCleanupService,
+                referralEligibilityService,
+                Clock.fixed(CUTOFF, ZoneOffset.UTC)
         );
 
         DataRetentionCleanupResult result = service.cleanupBatch(CUTOFF, 100);
@@ -103,6 +116,7 @@ class DataRetentionCleanupServiceTest {
                 Mockito.mock(CleaningOrderPhotoRepository.class);
         CleaningOrderEventRepository eventRepository = Mockito.mock(CleaningOrderEventRepository.class);
         MediaOrphanCleanupService mediaOrphanCleanupService = Mockito.mock(MediaOrphanCleanupService.class);
+        ReferralEligibilityService referralEligibilityService = Mockito.mock(ReferralEligibilityService.class);
         Mockito.when(orderRepository.findRetentionEligibleOrderIds(CUTOFF, 2))
                 .thenReturn(List.of(10L, 11L));
         Mockito.when(mediaOrphanCleanupService.deleteUnreferencedBatch(2)).thenReturn(0);
@@ -111,12 +125,45 @@ class DataRetentionCleanupServiceTest {
                 issuePhotoRepository,
                 completionPhotoRepository,
                 eventRepository,
-                mediaOrphanCleanupService
+                mediaOrphanCleanupService,
+                referralEligibilityService,
+                Clock.fixed(CUTOFF, ZoneOffset.UTC)
         );
 
         DataRetentionCleanupResult result = service.cleanupBatch(CUTOFF, 2);
 
         Assertions.assertTrue(result.hasMoreWork());
+    }
+
+    @Test
+    void fullExpiredReferralMarkerBatch_requestsAnotherIteration() {
+        CleaningOrderRepository orderRepository = Mockito.mock(CleaningOrderRepository.class);
+        CleaningOrderIssuePhotoRepository issuePhotoRepository =
+                Mockito.mock(CleaningOrderIssuePhotoRepository.class);
+        CleaningOrderPhotoRepository completionPhotoRepository =
+                Mockito.mock(CleaningOrderPhotoRepository.class);
+        CleaningOrderEventRepository eventRepository = Mockito.mock(CleaningOrderEventRepository.class);
+        MediaOrphanCleanupService mediaOrphanCleanupService = Mockito.mock(MediaOrphanCleanupService.class);
+        ReferralEligibilityService referralEligibilityService = Mockito.mock(ReferralEligibilityService.class);
+        Mockito.when(orderRepository.findRetentionEligibleOrderIds(CUTOFF, 2))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(referralEligibilityService.deleteExpiredMarkers(CUTOFF, 2)).thenReturn(2);
+        var service = new DataRetentionCleanupService(
+                orderRepository,
+                issuePhotoRepository,
+                completionPhotoRepository,
+                eventRepository,
+                mediaOrphanCleanupService,
+                referralEligibilityService,
+                Clock.fixed(CUTOFF, ZoneOffset.UTC)
+        );
+
+        DataRetentionCleanupResult result = service.cleanupBatch(CUTOFF, 2);
+
+        Assertions.assertAll(
+                () -> Assertions.assertEquals(2, result.deletedReferralEligibilityMarkerCount()),
+                () -> Assertions.assertTrue(result.hasMoreWork())
+        );
     }
 
     @Test
